# speciesid

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  artisan  composer.json  meat_mixture_5k.fq  package-lock.json  package.json  test_sample.fq
benchmark_results/: ablation_degradation.tsv  ablation_no_mito_cn.tsv  binary_beef_horse.tsv  binary_beef_pork.tsv  binary_chicken_pork.tsv  performance.tsv  real_data.tsv  real_data_details.tsv  ternary.tsv  trace_detection.tsv
data/amplicons/: Anas_platyrhynchos_16S.fa  Bos_taurus_16S.fa  Bos_taurus_COI.fa  Bos_taurus_cytb.fa  Bubalus_bubalis_16S.fa  Bubalus_bubalis_COI.fa  Bubalus_bubalis_cytb.fa  Canis_lupus_16S.fa  Canis_lupus_cytb.fa  Capra_hircus_16S.fa  Capra_hircus_cytb.fa  Equus_asinus_16S.fa  Equus_asinus_cytb.fa  Equus_caballus_16S.fa  Equus_caballus_cytb.fa  Gadus_morhua_16S.fa  Gadus_morhua_cytb.fa  Gallus_gallus_16S.fa  Gallus_gallus_cytb.fa  Meleagris_gallopavo_16S.fa  Meleagris_gallopavo_COI.fa  Meleagris_gallopavo_cytb.fa  Oreochromis_niloticus_16S.fa  Ovis_aries_16S.fa  Ovis_aries_cytb.fa  Pangasianodon_hypophthalmus_16S.fa  Pangasianodon_hypophthalmus_cytb.fa  Salmo_salar_16S.fa  Salmo_salar_cytb.fa  Sus_barbatus_16S.fa  Sus_barbatus_cytb.fa  Sus_scrofa_16S.fa  Sus_scrofa_cytb.fa
data/benchmark/: ground_truth.tsv  ground_truth_denay_full.tsv  ground_truth_opsonx.tsv
data/mitogenomes/: NC_006295.fa  NC_007942.fa
gui/: Info.plist  gui_analysis.c  gui_analysis.h  main_gui.c  nuklear_setup.h
paper/: speciesid_paper.md
public/: index.php
schema/: manifest_v1.json  result_v1.json
scripts/: compute_metrics.py  download_opsonx.sh  download_real_data.sh  enumerate_denay.sh  extract_amplicons.py  run_paper_benchmark.sh  run_real_data_benchmark.sh
src/: analyze.c  analyze.h  calibrate.c  calibrate.h  classify.c  classify.h  degrade.c  degrade.h  em.c  em.h  fastq.c  fastq.h  index.c  index.h  kmer.c  kmer.h  main.c  params.h  refdb.c  refdb.h  refseqs.h  report.c  report.h  simulate.c  simulate.h  update.c  update.h  utils.c  utils.h
test/: run_tests.sh  test_analyze.c  test_classify.c  test_em.c  test_index.c  test_integration.c  test_kmer.c  test_longread.c  test_report.c  test_simulate.c
web/: .env.example  .gitignore  composer.json  package-lock.json  phpunit.xml  tailwind.config.js
web/app/Http/Controllers/: CalibrationController.php  DashboardController.php  DatabaseController.php  ReportController.php  RunController.php  SampleController.php  UploadController.php
web/app/Jobs/: AnalyzeRun.php  GenerateReports.php
web/app/Models/: CalibrationProfile.php  ReferenceDatabase.php  Report.php  Run.php  Sample.php  User.php
web/app/Models/Concerns/: HasPublicUuid.php
web/app/Policies/: CalibrationProfilePolicy.php  ReferenceDatabasePolicy.php  ReportPolicy.php  RunPolicy.php  SamplePolicy.php
web/app/Providers/: AppServiceProvider.php
web/app/Services/: AuditReportService.php  SpeciesIDEngine.php
web/bootstrap/: app.php
web/config/: filesystems.php  speciesid.php
web/database/migrations/: 2026_06_16_032048_create_calibration_profiles_table.php  2026_06_16_032048_create_reference_databases_table.php  2026_06_16_032048_create_runs_table.php  2026_06_16_032049_create_reports_table.php  2026_06_16_032049_create_samples_table.php  2026_06_16_120000_add_role_to_users_table.php
web/forge/: DEPLOY.md
web/resources/views/: dashboard.blade.php  features.blade.php  welcome.blade.php
web/resources/views/auth/: login.blade.php
web/resources/views/calibrations/: create.blade.php  index.blade.php  show.blade.php
web/resources/views/components/: application-logo.blade.php  nav-link.blade.php  responsive-nav-link.blade.php
web/resources/views/databases/: create.blade.php  index.blade.php  show.blade.php
web/resources/views/layouts/: app.blade.php  guest.blade.php  navigation.blade.php
web/resources/views/reports/: sample_pdf.blade.php
web/resources/views/runs/: index.blade.php  qc.blade.php  show.blade.php
web/resources/views/samples/: show.blade.php  show_pending.blade.php
web/resources/views/upload/: create.blade.php
web/routes/: web.php
web/tests/Feature/: ExampleTest.php  SpeciesIdWorkflowTest.php
